overflow-x problem fix (carousels 100vw)

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
+  overflow-x: hidden;
 
   @include respond(tab-land) {
     // width < 1200?
@@ -15,10 +16,10 @@ html {
   @include respond(big-desktop) {
     font-size: 75%; //1rem = 12, 12/16
   }
+}
 
-  @include respond(tab-port) {
-    overflow-x: hidden;
-  }
+body {
+  overflow-x: hidden;
 }
 
 *,
